--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -5,14 +5,14 @@
             <svg class="header__logo-image" width="49" height="26" viewBox="0 0 49 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M49 26H0L24.5 0L49 26ZM13.3075 13.1309L16.6442 16.6702L19.981 13.1309L16.6442 9.58115L13.3075 13.1309ZM16.6442 25.0052L19.981 21.466L16.6442 17.9162L13.3075 21.466L16.6442 25.0052ZM32.4083 25.0052L35.745 21.466L32.4083 17.9162L29.019 21.466L32.4083 25.0052ZM28.4673 5.40314C28.4473 5.43762 28.4207 5.46941 28.3885 5.49738C27.3507 6.6178 26.2997 7.73822 25.2357 8.84817C25.1437 8.94241 25.2357 9.00524 25.2357 9.08901L28.3097 12.356L28.4542 12.4921L31.7909 8.96335L28.4673 5.40314ZM8.78847 25.0052L8.91984 24.8691L11.9938 21.6126C12.0428 21.5717 12.0702 21.5173 12.0702 21.4607C12.0702 21.4042 12.0428 21.3498 11.9938 21.3089C11.0611 20.3456 10.1547 19.3613 9.23512 18.3874L8.78847 17.9162L5.45174 21.466L8.78847 25.0052ZM17.2354 8.95288L20.5721 12.4921L20.6772 12.3979L23.8169 9.06806C23.922 8.95288 23.8169 8.89005 23.8169 8.80628L20.7429 5.56021L20.6115 5.42408L17.2354 8.95288ZM17.2354 17.3298L20.5721 20.8691L20.7429 20.7016C21.7413 19.6545 22.7528 18.6073 23.7643 17.4869C23.7926 17.4663 23.8152 17.4412 23.8307 17.4133C23.8461 17.3853 23.8541 17.3551 23.8541 17.3246C23.8541 17.2941 23.8461 17.2639 23.8307 17.2359C23.8152 17.208 23.7926 17.1829 23.7643 17.1623C22.8185 16.1675 21.8727 15.1728 20.9399 14.1675L20.5721 13.7906L17.2354 17.3298ZM32.9995 17.3298L36.3362 20.8691L39.6729 17.3298L36.3362 13.7906L32.9995 17.3298ZM28.4673 13.7801V13.8534L25.3013 17.2147C25.1962 17.3089 25.2357 17.3717 25.3013 17.4555L28.244 20.5969C28.3228 20.6911 28.4147 20.7853 28.5198 20.8901L31.8566 17.3508L28.4673 13.7801ZM12.7295 20.8482C12.7453 20.8175 12.7675 20.7892 12.7952 20.7644L15.9611 17.4031C16.0531 17.2984 15.9611 17.2461 15.9611 17.1623L12.8477 13.8953C12.8069 13.8484 12.7583 13.8061 12.7032 13.7696L9.37962 17.2984L12.7295 20.8482ZM32.3558 16.6597L35.6925 13.1204L32.3558 9.59162L29.019 13.1309L32.3558 16.6597ZM24.4737 8.28272L27.8105 4.74346L24.5263 1.27749H24.4606L21.2552 4.71204C21.2354 4.73712 21.2249 4.76616 21.2249 4.79581C21.2249 4.82546 21.2354 4.8545 21.2552 4.87958L24.4737 8.28272ZM24.4737 16.6597L27.8105 13.1204L24.5 9.58115L21.1633 13.1309L24.4737 16.6597ZM24.4737 25.0366L27.8105 21.4974L24.4737 17.9476L21.1633 21.466L24.4737 25.0366ZM40.2378 25.0366L43.5745 21.4974L40.2509 17.9791H40.1853L36.9668 21.3613C36.8617 21.4764 36.9668 21.5288 36.9668 21.6021L39.5941 24.4398L40.2378 25.0366ZM1.89169 25.2356H7.88204L4.91314 22.0942L1.89169 25.2356ZM41.1705 25.2356H47.1083L44.1394 22.0942L41.1705 25.2356ZM23.5542 25.2356L20.5721 22.0942L17.5901 25.2356H23.5542ZM33.3147 25.2356H39.2525L36.2836 22.0942L33.3147 25.2356ZM31.3968 25.2356L28.4279 22.0942L25.459 25.2356H31.3968ZM15.6327 25.2356L12.6638 22.0942L9.69491 25.2356H15.6327Z" fill="white"/>
               </svg>
-            <span class="header__logo-title">Louvre</span>
+            <span class="title">Louvre</span>
         </a>
         <label class="burger" for="burger-toggler"><span class="burger__buns"></span></label>
         <div class="burger-menu">
             <div class="burger-menu__container">
                 <ul class="burger-nav__list">
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#visiting">Visiting
+                        <a class="nav__list-link" href="#visiting">Visiting
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -21,7 +21,7 @@
                 </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#explore">Explore
+                        <a class="nav__list-link" href="#explore">Explore
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -30,7 +30,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#video">Video
+                        <a class="nav__list-link" href="#video">Video
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -39,7 +39,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#gallery">Gallery
+                        <a class="nav__list-link" href="#gallery">Gallery
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -48,7 +48,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#tickets">Tickets
+                        <a class="nav__list-link" href="#tickets">Tickets
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -57,7 +57,7 @@
                 </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav-link" href="#contacts">Contacts
+                        <a class="nav__list-link" href="#contacts">Contacts
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -158,22 +158,22 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Visiting</a>
+                    <a class="nav__list-link" href="#visiting">Visiting</a>
                 </li>
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Explore</a>
+                    <a class="nav__list-link" href="#explore">Explore</a>
                 </li>
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Video</a>
+                    <a class="nav__list-link" href="#video">Video</a>
                 </li>
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav__list-link" href="#gallery">Gallery</a>
                 </li>
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Tickets</a>
+                    <a class="nav__list-link" href="#tickets">Tickets</a>
                 </li>
                 <li class="nav__list-item">
-                    <a class="nav-link" href="#">Contacts</a>
+                    <a class="nav__list-link" href="#contacts">Contacts</a>
                 </li>
             </ul>
         </nav>
