--- a/src/scss/sections/_gallery.scss
+++ b/src/scss/sections/_gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: var(--palette-primary-main);
@@ -6,12 +7,36 @@
     padding-bottom: 75px;
     &__container {
         max-width: 1440px;
+        height: 1220px;
         margin-left: auto;
         margin-right: auto;
+        overflow: hidden;
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: 73px;
+            left: 0;
+            width: 100%;
+            height: 15%;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+        }
+        @include media-breakpoint-down(xxl) {
+            height: 1000px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
     }
     &__body {
+        overflow: auto;
         display: flex;
+        justify-content: center;
         margin-top: 75px;
+        gap: 36px;
+        width: 100%;
+        height: 100%;
+        @include media-breakpoint-down(lg) {
+            gap: 24px;
+        }
     }
 }
 
@@ -24,10 +49,19 @@
         display: flex;
         flex-direction: column;
         gap: 24px;
+        width: 50%;
         &:first-child,
         &:last-child {
             margin-top: 50px;
         }
+        @include media-breakpoint-down(xl) {
+            &:last-child {
+                display: none;
+            }
+        }
     }
-    &__column-image {}
+    &__column-image {
+        width: 100%;
+        object-fit: cover;
+    }
 }
