--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -13,6 +13,20 @@
             padding-left: 20px;
             padding-right: 20px;
         }
+        @include media-breakpoint-down(xl) {
+            padding-top: 60px;
+            padding-bottom: 60px;
+            gap: 40px;
+        }
+        @include media-breakpoint-down(lg) {
+            padding-top: 40px;
+            padding-bottom: 40px;
+            gap: 20px;
+        }
+        @include media-breakpoint-down(sm) {
+            padding-top: 36px;
+            padding-bottom: 36px;
+        }
     }
 }
 
@@ -28,13 +42,15 @@
         font-size: 22px;
         line-height: 38px;
         color: var(--palette-secondary-text);
-        @include media-breakpoint-down(xl) {
+        @include media-breakpoint-down(xxl) {
             display: none;
         }
     }
 }
 
 .journey-player {
+    display: flex;
+    flex-direction: column;
     &__video {
         max-width: 1440px;
         max-height: 650px;
@@ -47,8 +63,17 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+        align-items: center;
         background-color: var(--palette-primary-main);
         padding: 27px 30px;
+        gap: 10px;
+        @include media-breakpoint-down(lg) {
+            padding: 10px 20px;
+            gap: 5px;
+        }
+        @include media-breakpoint-down(sm) {
+            padding: 5px;
+        }
     }
 }
 
@@ -56,26 +81,51 @@
     &__fullscreen-btn,
     &__volume-btn,
     &__play-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: transparent;
         border: none;
         cursor: pointer;
         transition: 0.3s;
+        padding: 10px;
+        @include media-breakpoint-down(xl) {
+            padding: 5px;
+        }
         &:hover {
             filter: brightness(0.5);
         }
     }
     &__play-btn {}
+    &__play-bar,
+    &__volume-bar {
+        width: 100%;
+        height: 15px;
+        @include media-breakpoint-down(md) {
+            height: 5px;
+        }
+        @include media-breakpoint-down(sm) {
+            height: 3px;
+        }
+    }
     &__play-bar {
-        width: 60%;
+        min-width: 100px;
     }
     &__volume-btn {}
     &__volume-bar {
-        width: 15%;
+        max-width: 200px;
+        min-width: 80px;
     }
     &__fullscreen-btn {}
 }
 
-.play-icon {}
+.play-icon,
+.volume-icon,
+.fullscreen-icon {
+    width: 100%;
+    height: 100%;
+    min-width: 10px;
+}
 
 .volume-icon {}
 
@@ -87,7 +137,6 @@
     justify-content: center;
     gap: 20px;
     width: 100%;
-    margin-top: 30px;
 }
 
 .slider-next-btn,
