--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -89,10 +89,12 @@
     }
     .burger-nav {
         &__list {
+            display: flex;
             flex-direction: column;
             align-items: flex-start;
         }
         &__list-item {
+            display: flex;
             width: 100%;
             .nav-link {
                 display: inline-flex;
@@ -132,7 +134,7 @@
                 max-height: 95px;
             }
         }
-        &__item:nth-child(1) {
+        &__item:first-child {
             grid-row-start: 1;
             grid-column-start: 1;
             grid-row-end: 2;
