feat: add slider to hero

--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -9,7 +9,11 @@
         </div>
         <div class="hero-slider">
             <div class="hero-slider__images">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image.jpg" alt="">
+                <img class="hero-slider__images-item" src="./img/hero/hero-image1.jpg" alt="">
+                <img class="hero-slider__images-item" src="./img/hero/hero-image2.jpg" alt="">
+                <img class="hero-slider__images-item" src="./img/hero/hero-image3.jpg" alt="">
+                <img class="hero-slider__images-item" src="./img/hero/hero-image4.jpg" alt="">
+                <img class="hero-slider__images-item" src="./img/hero/hero-image5.jpg" alt="">
             </div>
             <div class="slider-nav">
                 <div class="slider-nav__slides-counter">
