--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -126,6 +126,46 @@
                         </picture>
                     </li>
                 </ul>
+                <ul class="burger-gallery">
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
+                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
+                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
+                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
+                        </picture>
+                    </li>
+                </ul>
+                <ul class="burger-gallery">
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
+                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
+                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
+                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
+                        </picture>
+                    </li>
+                </ul>
                 <ul class="socials">
                     <li class="socials__item">
                         <svg class="socials__item-icon" width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
