--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -101,8 +101,8 @@
     }
     &__images {
         position: relative;
-        width: 100%;
-        height: 100%;
+        width: 1000px;
+        height: 750px;
         &::before {
             content: "";
             position: absolute;
@@ -125,6 +125,33 @@
     &__images-item {
         width: 100%;
         height: 100%;
+        animation: slide 16s infinite;
+        position: absolute;
+        opacity: 0;
+        object-fit: cover;
+        &:nth-child(1) {
+            animation-delay: 12s;
+        }
+        &:nth-child(2) {
+            animation-delay: 9s;
+        }
+        &:nth-child(3) {
+            animation-delay: 6s;
+        }
+        &:nth-child(4) {
+            animation-delay: 3;
+        }
+        &:nth-child(5) {
+            animation-delay: 0;
+        }
+        @keyframes slide {
+            25% {
+                opacity: 1;
+            }
+            40% {
+                opacity: 0;
+            }
+        }
     }
 }
 
