feat: work with slider

--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -156,7 +156,7 @@
 }
 
 .slider-nav {
-    display: inline-flex;
+    display: none;
     align-items: center;
     justify-content: center;
     position: absolute;
