--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -47,9 +47,24 @@
                 <li class="slider__list-item">
                     <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
-                <!-- <li class="slider__list-item">
+                <li class="slider__list-item">
                     <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li> -->
+                </li>
+                <li class="slider__list-item">
+                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </li>
+                <li class="slider__list-item">
+                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </li>
+                <li class="slider__list-item">
+                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </li>
+                <li class="slider__list-item">
+                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </li>
+                <li class="slider__list-item">
+                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                </li>
             </ul>
             <button class="slider-next-btn">
               <svg class="slider-next-icon" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
