--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -134,9 +134,9 @@
 .journey-slider {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 20px;
     width: 100%;
+    overflow: hidden;
 }
 
 .slider-next-btn,
@@ -160,9 +160,8 @@
 .slider {
     &__list {
         width: 100%;
-        overflow: hidden;
+        overflow: auto;
         display: flex;
-        justify-content: center;
         align-items: center;
         gap: 80px;
         @include media-breakpoint-down(xxl) {
@@ -186,7 +185,8 @@
 
 .slider-video {
     display: flex;
-    width: 100%;
-    height: 100%;
     min-height: 220px;
+    @include media-breakpoint-down(md) {
+        width: 100%;
+    }
 }
