feat: work at slider in hero

--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -8,12 +8,19 @@
           </a>
         </div>
         <div class="hero-slider">
+            <input id="slide1" type="radio" name="slide" checked>
+            <input id="slide2" type="radio" name="slide">
+            <input id="slide3" type="radio" name="slide">
+            <input id="slide4" type="radio" name="slide">
+            <input id="slide5" type="radio" name="slide">
+
             <div class="hero-slider__images">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image1.jpg" alt="">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image2.jpg" alt="">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image3.jpg" alt="">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image4.jpg" alt="">
-                <img class="hero-slider__images-item" src="./img/hero/hero-image5.jpg" alt="">
+                <img class="hero-slider__images-item1" src="./img/hero/hero-image1.jpg" alt="">
+                <img class="hero-slider__images-item2" src="./img/hero/hero-image2.jpg" alt="">
+                <img class="hero-slider__images-item3" src="./img/hero/hero-image3.jpg" alt="">
+                <img class="hero-slider__images-item4" src="./img/hero/hero-image4.jpg" alt="">
+                <img class="hero-slider__images-item5" src="./img/hero/hero-image5.jpg" alt="">
+
             </div>
             <div class="slider-nav">
                 <div class="slider-nav__slides-counter">
@@ -23,19 +30,19 @@
                 </div>
                 <ul class="slider-nav__bars">
                     <li class="slider-nav__bars-item">
-                        <button class="slider-nav__bars-btn"><span class="slider-nav__bars-toggler"></span></button>
+                        <label class="slider-nav__bars-toggler" for="slide1"></label>
                     </li>
                     <li class="slider-nav__bars-item">
-                        <button class="slider-nav__bars-btn"><span class="slider-nav__bars-toggler"></span></button>
+                        <label class="slider-nav__bars-toggler" for="slide2"></label>
                     </li>
                     <li class="slider-nav__bars-item">
-                        <button class="slider-nav__bars-btn"><span class="slider-nav__bars-toggler"></span></button>
+                        <label class="slider-nav__bars-toggler" for="slide3"></label>
                     </li>
                     <li class="slider-nav__bars-item">
-                        <button class="slider-nav__bars-btn"><span class="slider-nav__bars-toggler"></span></button>
+                        <label class="slider-nav__bars-toggler" for="slide4"></label>
                     </li>
                     <li class="slider-nav__bars-item">
-                        <button class="slider-nav__bars-btn"><span class="slider-nav__bars-toggler"></span></button>
+                        <label class="slider-nav__bars-toggler" for="slide5"></label>
                     </li>
                 </ul>
                 <div class="slider-nav__arrows">
