--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,253 +1,265 @@
-.hero {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: var(--palette-primary-main);
-    &__container {
-        max-width: 1440px;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
+    .hero {
         position: relative;
-        margin-left: auto;
-        margin-right: auto;
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-bottom: 60px;
-        @include media-breakpoint-down(lg) {
-            flex-direction: column;
-        }
-    }
-    &__title {
-        position: absolute;
-        top: 15%;
-        left: 20px;
-        transform: translateX(0%);
-        transition: 0.5s;
-        z-index: 2;
-        .title {
-            color: var(--palette-primary-text);
-        }
-        @include media-breakpoint-down(md) {
+        width: 100%;
+        height: 100%;
+        background-color: var(--palette-primary-main);
+        &__container {
+            max-width: 1440px;
+            height: 100%;
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
+            justify-content: flex-end;
             position: relative;
-            top: 0;
-            left: 0;
-        }
-        .btn {
-            max-width: 360px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 55px;
-            font-family: 'Roboto', sans-serif, sans-serif;
-            font-weight: 300;
-            font-size: 22px;
-            letter-spacing: 2px;
-            padding: 25px 64px;
-            border: none;
-            border-radius: 10px;
-            background-color: var(--palette-primary-dark);
-            color: var(--palette-primary-text);
-            &:hover {
-                background-color: var(--palette-secondary-light);
-            }
-            @include media-breakpoint-down(xl) {
-                padding: 20px 50px;
-            }
+            margin-left: auto;
+            margin-right: auto;
+            padding-right: 20px;
+            padding-left: 20px;
+            padding-bottom: 60px;
             @include media-breakpoint-down(lg) {
-                max-width: 320px;
-                padding: 15px 40px;
+                flex-direction: column;
+            }
+        }
+        &__title {
+            position: absolute;
+            top: 15%;
+            left: 20px;
+            transform: translateX(0%);
+            transition: 0.5s;
+            z-index: 3;
+            .title {
+                color: var(--palette-primary-text);
             }
             @include media-breakpoint-down(md) {
-                display: none;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                position: relative;
+                top: 0;
+                left: 0;
+            }
+            .btn {
+                max-width: 360px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-top: 55px;
+                font-family: 'Roboto', sans-serif, sans-serif;
+                font-weight: 300;
+                font-size: 22px;
+                letter-spacing: 2px;
+                padding: 25px 64px;
+                border: none;
+                border-radius: 10px;
+                background-color: var(--palette-primary-dark);
+                color: var(--palette-primary-text);
+                &:hover {
+                    background-color: var(--palette-secondary-light);
+                }
+                @include media-breakpoint-down(xl) {
+                    padding: 20px 50px;
+                }
+                @include media-breakpoint-down(lg) {
+                    max-width: 320px;
+                    padding: 15px 40px;
+                }
+                @include media-breakpoint-down(md) {
+                    display: none;
+                }
             }
         }
-    }
-    &__title-desc {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 300;
-        font-size: 28px;
-        letter-spacing: 2px;
-        color: var(--palette-primary-text);
-        @include media-breakpoint-down(xl) {
-            font-size: 23px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 20px;
-        }
-        @include media-breakpoint-down(sm) {
-            font-size: 16px;
-        }
-    }
-}
-
-.hero-slider {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: relative;
-    @include media-breakpoint-down(xxl) {
-        width: 69%;
-    }
-    @include media-breakpoint-down(xl) {
-        width: 100%;
-    }
-    &__images {
-        position: relative;
-        width: 1000px;
-        height: 750px;
-        &::before {
-            content: "";
-            z-index: 1;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, var(--palette-primary-main) 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
-        }
-        @include media-breakpoint-down(xl) {
-            width: 60%;
-        }
-        @include media-breakpoint-down(md) {
-            width: 100%;
-            &::before {
-                display: none;
-            }
-        }
-    }
-    &__images-item {
-        width: 100%;
-        height: 100%;
-        animation: slide 16s infinite;
-        position: absolute;
-        opacity: 0;
-        object-fit: cover;
-        &:nth-child(1) {
-            animation-delay: 12s;
-        }
-        &:nth-child(2) {
-            animation-delay: 9s;
-        }
-        &:nth-child(3) {
-            animation-delay: 6s;
-        }
-        &:nth-child(4) {
-            animation-delay: 3;
-        }
-        &:nth-child(5) {
-            animation-delay: 0;
-        }
-        @keyframes slide {
-            25% {
-                opacity: 1;
-            }
-            40% {
-                opacity: 0;
-            }
-        }
-    }
-}
-
-.slider-nav {
-    display: none;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    gap: 10px;
-    bottom: 0;
-    right: 0;
-    background-color: var(--palette-primary-main);
-    padding: 40px 75px;
-    @include media-breakpoint-down(sm) {
-        padding: 10px 75px;
-        gap: 5px;
-    }
-    &__slides-counter {
-        display: flex;
-        gap: 10px;
-        font-family: 'Roboto', sans-serif;
-        font-size: 22px;
-        color: var(--palette-primary-text);
-        line-height: 17px;
-        @include media-breakpoint-down(sm) {
-            gap: 5px;
-        }
-    }
-    &__bars {
-        display: inline-flex;
-    }
-    &__bars-item {
-        display: flex;
-        .slider-nav__bars-btn {
-            display: flex;
-            background-color: transparent;
-            border: none;
-            padding: 10px 20px;
+        &__title-desc {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+            font-size: 28px;
+            letter-spacing: 2px;
+            color: var(--palette-primary-text);
             @include media-breakpoint-down(xl) {
-                padding: 10px 10px;
+                font-size: 23px;
+            }
+            @include media-breakpoint-down(md) {
+                font-size: 20px;
             }
             @include media-breakpoint-down(sm) {
-                padding: 5px;
+                font-size: 16px;
+            }
+        }
+    }
+    
+    #slide1:checked~.hero-slider__images {
+        .hero-slider__images-item1 {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+    
+    #slide2:checked~.hero-slider__images {
+        .hero-slider__images-item2 {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+    
+    #slide3:checked~.hero-slider__images {
+        .hero-slider__images-item3 {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+    
+    #slide4:checked~.hero-slider__images {
+        .hero-slider__images-item4 {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+    
+    #slide5:checked~.hero-slider__images {
+        .hero-slider__images-item5 {
+            opacity: 1;
+            z-index: 1;
+        }
+    }
+    
+    .hero-slider {
+        input {
+            display: none;
+        }
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: relative;
+        @include media-breakpoint-down(xxl) {
+            width: 69%;
+        }
+        @include media-breakpoint-down(xl) {
+            width: 100%;
+        }
+        &__images {
+            position: relative;
+            width: 1000px;
+            height: 750px;
+            &::before {
+                content: "";
+                z-index: 2;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(90deg, var(--palette-primary-main) 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
+            }
+            @include media-breakpoint-down(xl) {
+                width: 60%;
+            }
+            @include media-breakpoint-down(md) {
+                width: 100%;
+                &::before {
+                    display: none;
+                }
+            }
+        }
+        &__images-item1,
+        &__images-item2,
+        &__images-item3,
+        &__images-item4,
+        &__images-item5 {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            object-fit: cover;
+            opacity: 0;
+            transition: opacity ease-in-out 1s;
+        }
+    }
+    
+    .slider-nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        gap: 10px;
+        bottom: 0;
+        right: 0;
+        background-color: var(--palette-primary-main);
+        padding: 40px 75px;
+        z-index: 2;
+        @include media-breakpoint-down(sm) {
+            padding: 10px 75px;
+            gap: 5px;
+        }
+        &__slides-counter {
+            display: flex;
+            gap: 10px;
+            font-family: 'Roboto', sans-serif;
+            font-size: 22px;
+            color: var(--palette-primary-text);
+            line-height: 17px;
+            @include media-breakpoint-down(sm) {
+                gap: 5px;
+            }
+        }
+        &__bars {
+            display: inline-flex;
+        }
+        &__bars-item {
+            display: flex;
+            .slider-nav__bars-toggler {
+                display: flex;
+                padding: 10px 20px;
+                &::after {
+                    content: "";
+                    width: 16px;
+                    height: 16px;
+                    background-color: var(--palette-primary-light);
+                }
             }
             &:hover {
-                .slider-nav__bars-toggler {
+                .slider-nav__bars-toggler::after {
                     background-color: var(--palette-secondary-light);
                 }
             }
-            .slider-nav__bars-toggler {
-                display: flex;
-                width: 16px;
-                height: 16px;
-                background-color: var(--palette-primary-light);
-            }
         }
-    }
-    &__arrows {
-        display: flex;
-        .slider-nav__arrows-btn {
+        &__arrows {
             display: flex;
-            background-color: transparent;
-            border: none;
-            padding: 10px 20px;
-            @include media-breakpoint-down(xl) {
-                padding: 10px;
-            }
-            @include media-breakpoint-down(sm) {
-                padding: 5px;
-            }
-            &:hover {
-                svg {
-                    path {
-                        fill: var(--palette-secondary-light);
+            .slider-nav__arrows-btn {
+                display: flex;
+                background-color: transparent;
+                border: none;
+                padding: 10px 20px;
+                @include media-breakpoint-down(xl) {
+                    padding: 10px;
+                }
+                @include media-breakpoint-down(sm) {
+                    padding: 5px;
+                }
+                &:hover {
+                    svg {
+                        path {
+                            fill: var(--palette-secondary-light);
+                        }
                     }
                 }
             }
         }
+        @include media-breakpoint-down(xl) {
+            position: relative;
+        }
+        @include media-breakpoint-down(md) {
+            width: 100%;
+            gap: 20px;
+            padding: 40px 50px;
+        }
+        @include media-breakpoint-down(sm) {
+            gap: 10px;
+            padding: 40px 20px;
+        }
     }
-    @include media-breakpoint-down(xl) {
-        position: relative;
+    
+    .slides-counter {
+        &__current-slide {}
+        &__slash {}
+        &__all-slides {}
     }
-    @include media-breakpoint-down(md) {
-        width: 100%;
-        gap: 20px;
-        padding: 40px 50px;
-    }
-    @include media-breakpoint-down(sm) {
-        gap: 10px;
-        padding: 40px 20px;
-    }
-}
-
-.slides-counter {
-    &__current-slide {}
-    &__slash {}
-    &__all-slides {}
-}
