--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -13,18 +13,16 @@
             <input id="slide3" type="radio" name="slide">
             <input id="slide4" type="radio" name="slide">
             <input id="slide5" type="radio" name="slide">
-
             <div class="hero-slider__images">
                 <img class="hero-slider__images-item1" src="./img/hero/hero-image1.jpg" alt="">
                 <img class="hero-slider__images-item2" src="./img/hero/hero-image2.jpg" alt="">
                 <img class="hero-slider__images-item3" src="./img/hero/hero-image3.jpg" alt="">
                 <img class="hero-slider__images-item4" src="./img/hero/hero-image4.jpg" alt="">
                 <img class="hero-slider__images-item5" src="./img/hero/hero-image5.jpg" alt="">
-
             </div>
             <div class="slider-nav">
                 <div class="slider-nav__slides-counter">
-                    <span class="slides-counter__current-slide">01</span>
+                    <span class="slides-counter__current-slide"></span>
                     <span class="slides-counter__slash">|</span>
                     <span class="slides-counter__all-slides">05</span>
                 </div>
