--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -49,15 +49,48 @@
 }
 
 .journey-player {
+    position: relative;
     display: flex;
     flex-direction: column;
     &__video {
+        position: relative;
         max-width: 1440px;
         max-height: 650px;
         width: 100%;
         height: 100%;
         object-fit: cover;
         display: flex;
+    }
+    &__main-play-btn {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+        cursor: pointer;
+        &:hover {
+            filter: brightness(0.7);
+        }
+    }
+    &__main-play-icon {
+        @include media-breakpoint-down(xxl) {
+            width: 152px;
+            height: 152px;
+        }
+        @include media-breakpoint-down(lg) {
+            width: 80px;
+            height: 80px;
+        }
+        @include media-breakpoint-down(sm) {
+            width: 50px;
+            height: 50px;
+        }
     }
     &__navbar {
         display: flex;
@@ -67,6 +100,7 @@
         background-color: var(--palette-primary-main);
         padding: 27px 30px;
         gap: 10px;
+        z-index: 2;
         @include media-breakpoint-down(lg) {
             padding: 10px 20px;
             gap: 5px;
