feat: add checked effect to bars

--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -10,7 +10,7 @@
       </a>
         </div>
         <div class="hero-slider">
-            <input id="slide1" type="radio" name="slide" />
+            <input id="slide1" type="radio" name="slide" checked/>
             <input id="slide2" type="radio" name="slide" />
             <input id="slide3" type="radio" name="slide" />
             <input id="slide4" type="radio" name="slide" />
