feat: add comparison

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -18,8 +18,11 @@
                 </p>
             </div>
         </div>
-        <div class="explore__slider">
-            <img class="explore__slider-before-img" src="./img/explore/slider-before.jpg" alt="">
+        <div class="explore__comparison">
+            <figure class="explore__comparison-img-before">
+                <div class="explore__comparison-img-after"></div>
+            </figure>
+            <!-- <img class="explore__slider-before-img" src="./img/explore/slider-before.jpg" alt=""> -->
             <!-- <img class="explore__slider-after-img" src="" alt=""> -->
         </div>
     </div>
