--- a/src/scss/sections/_explore.scss
+++ b/src/scss/sections/_explore.scss
@@ -19,14 +19,34 @@
             flex-direction: column;
         }
     }
-    &__slider {
+    &__comparison {
+        width: 60vw;
+        height: 60vw;
+        max-width: 600px;
+        max-height: 600px;
+        overflow: hidden;
+    }
+    &__comparison-img-before {
+        background-image: url("/img/explore/slider-before.jpg");
+        background-size: cover;
+        position: relative;
+        width: 100%;
         height: 100%;
-        display: flex;
-        @include media-breakpoint-down(xl) {
+        margin: 0;
+        img {
+            position: relative;
             width: 100%;
-            align-items: center;
-            justify-content: center;
         }
+    }
+    &__comparison-img-after {
+        background-image: url("/img/explore/slider-after.jpg");
+        background-size: cover;
+        position: absolute;
+        width: 50%;
+        box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
+        overflow: hidden;
+        bottom: 0;
+        height: 100%;
     }
     &__slider-before-img,
     &__slider-after-img {
@@ -43,8 +63,6 @@
             min-height: 100%;
         }
     }
-    &__slider-before-img {}
-    &__slider-after-img {}
 }
 
 .explore-left {
