--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -74,6 +74,7 @@
         justify-content: center;
         z-index: 1;
         cursor: pointer;
+        transition-duration: 0.3s;
         &:hover {
             filter: brightness(0.7);
         }
@@ -135,6 +136,7 @@
     &__volume-bar {
         width: 100%;
         height: 15px;
+        cursor: pointer;
         @include media-breakpoint-down(md) {
             height: 5px;
         }
@@ -182,6 +184,7 @@
     align-items: center;
     justify-content: center;
     padding: 10px 20px;
+    cursor: pointer;
     transition-duration: 0.3s;
     &:hover {
         transform: scale(1.2);
