--- a/src/html/includes/_html-bottom.html
+++ b/src/html/includes/_html-bottom.html
@@ -1,3 +1,5 @@
-    <script src="js/main.min.js"></script>
-  </body>
+<script src="js/main.min.js"></script>
+<!-- <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> -->
+</body>
+
 </html>
