--- a/src/html/includes/_html-top.html
+++ b/src/html/includes/_html-top.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title><%=title%></title>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>
+        <%=title%>
+    </title>
     <!-- <link rel="preload" href=".woff2" as="font" type="font/woff2" crossorigin> -->
-    <link rel="stylesheet" href="css/main.min.css"/>
-    <link rel="shortcut icon" href="favicon/favicon.ico"/>
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/main.min.css" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" /> -->
+</head>
+
+<body>
