--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -38,6 +38,7 @@
                 </button>
             </div>
         </div>
+
         <div class="journey-slider">
             <button class="slider-prev-btn">
             <svg class="slider-prev-icon" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -54,24 +55,9 @@
                 <li class="slider__list-item">
                     <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
-                <li class="slider__list-item">
+                <!-- <li class="slider__list-item">
                     <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
-                <li class="slider__list-item">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/2OR0OCr6uRE?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
-                </li>
+                </li> -->
             </ul>
             <button class="slider-next-btn">
               <svg class="slider-next-icon" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
