fix: some fixes

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -12,7 +12,7 @@
             <div class="burger-menu__container">
                 <ul class="burger-nav__list">
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#visiting">Visiting
+                        <a class="nav__list-link" href="#visiting"><span class="nav__list-link-text">Visiting</span> 
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -21,7 +21,7 @@
                 </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#explore">Explore
+                        <a class="nav__list-link" href="#explore"><span class="nav__list-link-text">Explore</span> 
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -30,7 +30,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#video">Video
+                        <a class="nav__list-link" href="#video"><span class="nav__list-link-text">Video</span> 
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -39,7 +39,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#gallery">Gallery
+                        <a class="nav__list-link" href="#gallery"><span class="nav__list-link-text">Gallery</span> 
                 <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -48,7 +48,7 @@
               </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#tickets">Tickets
+                        <a class="nav__list-link" href="#tickets"><span class="nav__list-link-text">Tickets</span> 
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -57,7 +57,7 @@
                 </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#contacts">Contacts
+                        <a class="nav__list-link" href="#contacts"><span class="nav__list-link-text">Contacts</span> 
                   <svg class="burger-nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
@@ -65,6 +65,7 @@
                   </svg>
                 </a>
                     </li>
+
                 </ul>
                 <ul class="burger-gallery">
                     <li class="burger-gallery__item">
@@ -214,6 +215,9 @@
                 </li>
                 <li class="nav__list-item">
                     <a class="nav__list-link" href="#contacts">Contacts</a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav__list-link" href="">User page</a>
                 </li>
             </ul>
         </nav>
