--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -41,29 +41,31 @@
         <div class="journey-slider swiper">
             <ul class="slider__list swiper-wrapper">
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="380" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
             </ul>
-            <div class="slider-prev-btn swiper-button-prev">
-            </div>
-            <div class="slider-next-btn swiper-button-next">
-            </div>
             <div class="slider-pagination swiper-pagination"></div>
+            <svg class="slider-next-btn swiper-button-next" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M4.26785 39.4674L29.2678 21.2851C29.7367 20.9443 30 20.4818 30 19.9996C30 19.5173 29.7365 19.0548 29.2677 18.7139L4.26768 0.532545C3.29135 -0.177515 1.70852 -0.177515 0.732188 0.532545C-0.243978 1.24248 -0.244145 2.39376 0.732188 3.10382L23.9643 19.9996L0.732188 36.8962C0.244021 37.2512 2.05636e-05 37.7165 2.05636e-05 38.1819C2.05636e-05 38.6472 0.24402 39.1125 0.732353 39.4676C1.70869 40.1775 3.29152 40.1775 4.26785 39.4674Z" fill="#B3B3B3"/>
+              </svg>
+            <svg class="slider-prev-btn swiper-button-prev" width="30" height="40" viewBox="0 0 30 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M25.7321 0.532564L0.732166 18.7149C0.263333 19.0557 0 19.5182 0 20.0004C0 20.4827 0.263499 20.9452 0.732332 21.2861L25.7323 39.4675C26.7086 40.1775 28.2915 40.1775 29.2678 39.4675C30.244 38.7575 30.2441 37.6062 29.2678 36.8962L6.03566 20.0004L29.2678 3.10383C29.756 2.7488 30 2.28347 30 1.81814C30 1.3528 29.756 0.887472 29.2676 0.532442C28.2913 -0.177497 26.7085 -0.177496 25.7321 0.532564Z" fill="#B3B3B3"/>
+                </svg>
         </div>
     </div>
 </section>
