--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -5,9 +5,6 @@
     width: 100%;
     height: 100%;
     &__container {
-        display: grid;
-        min-width: 0;
-        gap: 75px;
         max-width: 1440px;
         margin-left: auto;
         margin-right: auto;
@@ -20,12 +17,10 @@
         @include media-breakpoint-down(xl) {
             padding-top: 60px;
             padding-bottom: 60px;
-            gap: 40px;
         }
         @include media-breakpoint-down(lg) {
             padding-top: 40px;
             padding-bottom: 40px;
-            gap: 20px;
         }
         @include media-breakpoint-down(sm) {
             padding-top: 36px;
@@ -56,6 +51,16 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    margin-top: 75px;
+    @include media-breakpoint-down(xl) {
+        margin-top: 60px;
+    }
+    @include media-breakpoint-down(lg) {
+        margin-top: 40px;
+    }
+    @include media-breakpoint-down(sm) {
+        margin-top: 36px;
+    }
     &__video {
         position: relative;
         max-width: 1440px;
@@ -172,12 +177,13 @@
 .fullscreen-icon {}
 
 .journey-slider {
-    max-width: 1440px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .slider {
     &__list {
-        margin-left: 50px;
+        margin-left: 6%;
     }
     &__list-item {}
 }
