--- a/src/scss/sections/header/_header.scss
+++ b/src/scss/sections/header/_header.scss
@@ -62,11 +62,18 @@
     }
     &__list-link {
         color: var(--palette-primary-text);
+        padding: 10px 25px;
+        max-width: 200px;
+        width: 100%;
+        display: flex;
+        align-items: center;
         font-family: 'Roboto', sans-serif;
         font-weight: 100;
         font-size: 22px;
-        padding: 10px 25px;
         letter-spacing: 2px;
+        @include media-breakpoint-down(xxl) {
+            padding: 10px 15px;
+        }
         @include media-breakpoint-down(xl) {
             font-weight: 300;
             font-size: 20px;
