--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -76,7 +76,7 @@
         width: 100%;
         max-height: 100vh;
         height: 100vh;
-        padding-bottom: 180px;
+        padding-bottom: 120px;
         &__container {
             .socials {
                 display: flex;
@@ -84,6 +84,7 @@
                 position: absolute;
                 bottom: 118px;
                 left: 0;
+                border-top: 1px solid var(--palette-primary-light);
             }
         }
     }
@@ -96,13 +97,23 @@
         &__list-item {
             display: flex;
             width: 100%;
-            .nav-link {
+            .nav__list-link {
                 display: inline-flex;
                 justify-content: space-between;
                 align-items: center;
+                .nav__list-link-text {
+                    max-width: 150px;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 100;
+                    font-size: 22px;
+                    letter-spacing: 2px;
+                    @include media-breakpoint-down(xl) {
+                        font-weight: 300;
+                        font-size: 20px;
+                    }
+                }
                 .burger-nav-link__arrow {
-                    width: 20px;
-                    margin-left: 10px;
+                    width: 30px;
                 }
                 &:hover {
                     .burger-nav-link__arrow {
@@ -125,7 +136,6 @@
         gap: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
-        border-bottom: 1px solid var(--palette-primary-light);
         &__item {
             display: flex;
             width: 100%;
